nginx-resource/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: backend.example.com  # Replace with your domain or use a wildcard DNS
    http:
      paths:
      - path: /api/v1/restaurants
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8000
